<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LaunchActivity"
    tools:showIn="@layout/activity_launch">

    <TextView
        android:id="@+id/tv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_details"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag"
        android:textSize="14sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/fab_margin"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/full_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_contact_number"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/fab_margin"/>
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/contact_number"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:padding="15dp"
        android:inputType="phone"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_state"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/fab_margin"/>
    <Spinner
        android:id="@+id/state_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/et_custom"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_need"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:textSize="@dimen/fab_margin"/>
    <Spinner
        android:id="@+id/requirment_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/et_custom"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_custom"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text="@string/register"
            android:layout_margin="2dp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

    </LinearLayout>